<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:gravity="center">






    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="400dp"
            android:layout_height="57dp"
            android:gravity="center"
            android:text="@string/homepage"
            android:textSize="30sp" />

        <Button
        android:id="@+id/btnActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"

        />

    <Button
        android:id="@+id/btnFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Fragment"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btnCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:textSize="12dp"
        />

    <Button
        android:id="@+id/btnToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btnRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="RadioButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="10dp"
        />

    <Button
        android:id="@+id/btnList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
         />

    <Button
        android:id="@+id/btnRecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recycle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
         />

        <Button
            android:id="@+id/btncstm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Customtoast"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="TabLayout"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/hvbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="H/V BTN" />

        <Button
        android:id="@+id/btnDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Date"
        android:textAllCaps="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="15dp"
       />

    <Button
        android:id="@+id/btnProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ProgressBar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
         />

        <Button
        android:id="@+id/btnAuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="AutoText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        />

        <Button
            android:id="@+id/btnedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EditText"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CardView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Toggle"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btnShared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Shared Preference"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"/>


        <Button
            android:id="@+id/btnVedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vedio Player"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Web View"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnStartAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="StartActivityForResult"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnStartActAlt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="StartActivityForResult.Alternate"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnPostApi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="API"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"/>



    </LinearLayout>
    </ScrollView>

</RelativeLayout>